--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Budget App",
-  "short_name": "Budget",
-  "start_url": "/dashboard.html",
+  "name": "E-Spend",
+  "short_name": "E-Spend",
+  "start_url": "/E-Spend/index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#6c3b3b",
+  "background_color": "#dcc8ea",
+  "theme_color": "#b1a4e0",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/E-Spend/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "/E-Spend/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
